--- a/app/src/main/res/drawable/chat_left_item.xml
+++ b/app/src/main/res/drawable/chat_left_item.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<item>
-    <shape>
-        <stroke
-            android:width="1dp"
-            android:color="#E1E8ED" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke
+        android:color="#E1E8ED"
+        android:width="1dp" />
 
-        <solid android:color="#E1E8ED" />
+    <solid android:color="#E1E8ED" />
+    <corners android:radius="15dp" />
+    <padding
+        android:bottom="10dp"
+        android:left="10dp"
+        android:right="10dp"
+        android:top="10dp" />
 
-        <padding
-            android:bottom="10dp"
-            android:left="10dp"
-            android:right="10dp"
-            android:top="10dp" />
-
-        <corners android:radius="0dp" />
-    </shape>
-</item>
-</layer-list>
+</shape>
