--- a/app/src/main/res/drawable/chat_right_item.xml
+++ b/app/src/main/res/drawable/chat_right_item.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<item>
-    <shape>
-        <stroke
-            android:width="1dp"
-            android:color="@color/colorPrimary" />
+<shape android:shape="rectangle"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <stroke
+        android:color="@color/colorPrimary"
+        android:width="1dp" />
 
-        <solid android:color="@color/colorPrimary" />
+    <solid android:color="@color/colorPrimary" />
 
-        <padding
-            android:bottom="10dp"
-            android:left="10dp"
-            android:right="10dp"
-            android:top="10dp" />
+    <corners android:radius="15dp" />
+    <padding
+        android:bottom="10dp"
+        android:left="10dp"
+        android:right="10dp"
+        android:top="10dp" />
 
-        <corners android:radius="0dp" />
-    </shape>
-</item>
-</layer-list>
+</shape>
