--- a/app/src/main/res/layout/chat__item_list_row.xml
+++ b/app/src/main/res/layout/chat__item_list_row.xml
@@ -64,8 +64,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
                         android:background="@drawable/chat_left_item"
+                        android:linksClickable="true"
                         android:singleLine="false"
-                        android:text="Example message"
+                        android:text="https://www.google.com"
                         android:textColor="#2b3135"
                         android:textSize="20sp"
                         android:textStyle="normal"
@@ -183,6 +184,7 @@
                         android:singleLine="false"
                         android:text="Example message"
                         android:textColor="#ffffff"
+                        android:textColorLink="#000"
                         android:textSize="20sp"
                         android:textStyle="normal"
                         app:layout_constraintEnd_toEndOf="parent"
